@@ -1,8 +1,0 @@
-{{ fullname }}
-{{ underline }}
-
-.. currentmodule:: {{ module }}
-
-.. autofunction:: {{ objname }}
-
-
